Changes are done

--- a/Sports Event/SportsEnroll.html
+++ b/Sports Event/SportsEnroll.html
@@ -54,7 +54,7 @@
         <th>Sr.</th>
         <th>Name</th>
         <th>Sport/Event</th>
-        <th>Entry Fee</th>
+        <th>Entry Fee!</th>
         <th></th>
       </tr>
     </thead>
