--- a/Sports Event/SportsEnroll.html
+++ b/Sports Event/SportsEnroll.html
@@ -79,13 +79,19 @@
     <tr>
       <td style="width:50px;">Total</td>
       <td colspan="3"><span id="numRows"></span> Participants</td>
-      <td style="text-align: center;">Rs. <span id="total-price" value=""></span> </td>
+      <td style="text-align: center;">Rs. <span id="total-price" style="color: green;font-weight: bold;" value=""></span> </td>
     </tr>
     
   </table>
   <table class="myTable1" style="border: none;margin-top: 5px;">
     <tr>
       <td colspan="5" style="text-align: end;"><button onclick="cloneRow()" style="background-color:#0084e5;color: white;border: 1px solid #6cc3f3;width: 100px;height: 25px;">+ Add Row</button></td>
+    </tr>
+  </table>
+
+  <table class="myTable1" style="border: none;margin-top: 5px;">
+    <tr>
+      <td colspan="5" style="text-align: end;"><button onclick="cloneRow()" style="background-color:#0084e5;color: white;border: 1px solid #6cc3f3;width: 100px;height: 25px;">+ Row</button></td>
     </tr>
   </table>
 
